Added Polished Blunite Stairs and Polished Carbonite Stairs

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=Weiße Ziegelsteine
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Polierter Blunite
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonite
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Polierter Carbonite
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Fußblock
 tile.white_cloud_block.name=Weiße Wolkenblock
 //tile.light_gray_cloud_block.name=<newline>
