--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -13,9 +13,11 @@ tile.white_brick_stairs.name=White Brick Stairs
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite Stairs
 tile.polished_blunite.name=Polished Blunite
+tile.polished_blunite_stairs.name=Polished Blunite Stairs
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite Stairs
 tile.polished_carbonite.name=Polished Carbonite
+tile.polished_carbonite_stairs.name=Polished Carbonite Stairs
 tile.footblock.name=Footblock
 tile.white_cloud_block.name=White Cloud Block
 tile.light_gray_cloud_block.name=Light Grey Cloud Block
