--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=sʞɔᴉɹᗺ ǝʇᴉɥM
 tile.blunite.name=ǝʇᴉunlᗺ
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=ǝʇᴉunlᗺ pǝɥsᴉloԀ
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=ǝʇᴉuoqɹɐƆ
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=ǝʇᴉuoqɹɐƆ pǝɥsᴉloԀ
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=ʞɔolqʇooℲ
 tile.white_cloud_block.name=ʞɔolq pnolƆ ǝʇᴉɥM
 //tile.light_gray_cloud_block.name=<newline>
