--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=Ladrillos blancos
 tile.blunite.name=Blunita
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunita pulida
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonita
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Carbonita pulida
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Futbloque
 tile.white_cloud_block.name=Bloque de nube blanca
 tile.light_gray_cloud_block.name=Bloque de nube gris claro
