--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=brik blanch
 tile.blunite.name=blunit
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=blunit tou bo tou propr
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=crbonit
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=cobnite bo
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=blok foutbol
 //tile.white_cloud_block.name=<newline>
 //tile.light_gray_cloud_block.name=<newline>
