--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=Briques blanches
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=Blunite poli
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonite
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=Carbonite polie
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Bloc de foot
 //tile.white_cloud_block.name=<newline>
 //tile.light_gray_cloud_block.name=<newline>
