--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=cool brik
 tile.blunite.name=moon-a-bloc
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=pretteh monnbloc
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=blac stoneh
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=pretteh blac ston
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=futbloc
 //tile.white_cloud_block.name=<newline>
 //tile.light_gray_cloud_block.name=<newline>
