--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -13,9 +13,11 @@ tile.white_brick_stairs.name=Witte bakstenen trap
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite trap
 tile.polished_blunite.name=Gepolijst blunite
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite trap
 tile.polished_carbonite.name=Gepolijst carbonite
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Voetblok
 tile.white_cloud_block.name=Wittewolkblok
 tile.light_gray_cloud_block.name=Lichtgrijzewolkblok
