--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -13,9 +13,11 @@ tile.white_bricks.name=白色磚塊
 tile.blunite.name=藍岩
 //tile.blunite_stairs.name=<newline>
 tile.polished_blunite.name=磨製藍岩
+//tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=碳岩
 //tile.carbonite_stairs.name=<newline>
 tile.polished_carbonite.name=磨製碳岩
+//tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=足球塊
 //tile.white_cloud_block.name=<newline>
 //tile.light_gray_cloud_block.name=<newline>
