--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -13,11 +13,11 @@ tile.white_brick_stairs.name=Witte bakstenen trap
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite trap
 tile.polished_blunite.name=Gepolijst blunite
-//tile.polished_blunite_stairs.name=<newline>
+tile.polished_blunite_stairs.name=Gepolijst blunite trap
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite trap
 tile.polished_carbonite.name=Gepolijst carbonite
-//tile.polished_carbonite_stairs.name=<newline>
+tile.polished_carbonite_stairs.name=Gepolijst carbonite trap
 tile.footblock.name=Voetblok
 tile.white_cloud_block.name=Wittewolkblok
 tile.light_gray_cloud_block.name=Lichtgrijzewolkblok
@@ -57,7 +57,7 @@ tile.gray_tetris_block.name=Grijs Tetris blok
 tile.tetris_glass.name=Tetris glas
 tile.japanese_tetris_cushion.name=Japans Tetris kussen
 tile.rainbow_tetris_scaffolding.name=Regenboog Tetris steiger
-tile.monochrome_tetris_scaffolding.name=Zwart-wit Tetris steiger
+tile.monochrome_tetris_scaffolding.name=Zwart-witte Tetris steiger
 
 tile.vampire_stone.name=Vampiersteen
 tile.medusa_stone.name=Medusasteen
@@ -90,7 +90,7 @@ item.crepe.name=Crêpe
 item.chocolate_crepe.name=Chocolade crêpe
 item.caramel_crepe.name=Karamel crêpe
 item.candy_cane.name=Zuurstok
-item.bandage.name=<newline>
+item.bandage.name=Verband
 
 item.super_mushroom.name=Super paddenstoel
 item.peach.name=Perzik
