--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -11,13 +11,13 @@ tile.red_bricks.name=Ladrillos rojos
 tile.white_bricks.name=Ladrillos blancos
 //tile.white_brick_stairs.name=Escalera de Ladrillos blancos
 tile.blunite.name=Blunita
-//tile.blunite_stairs.name=<newline>
+//tile.blunite_stairs.name=Escalera de Blunita
 tile.polished_blunite.name=Blunita pulida
-//tile.polished_blunite_stairs.name=<newline>
+//tile.polished_blunite_stairs.name=Escalera de Blunita pulida
 tile.carbonite.name=Carbonita
-//tile.carbonite_stairs.name=<newline>
+//tile.carbonite_stairs.name=Escalera de Carbonita
 tile.polished_carbonite.name=Carbonita pulida
-//tile.polished_carbonite_stairs.name=<newline>
+//tile.polished_carbonite_stairs.name=Escalera de Carbonita pulida
 tile.footblock.name=Futbloque
 tile.white_cloud_block.name=Bloque de nube blanca
 tile.light_gray_cloud_block.name=Bloque de nube gris claro
