Added Blunite and Carbonite Walls + Cleaning

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=Weiße Ziegelsteine
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=Polierter Blunite
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonite
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=Polierter Carbonite
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Fußblock
