--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=Ladrillos blancos
 //tile.white_brick_stairs.name=Escalera de Ladrillos blancos
 tile.blunite.name=Blunita
 //tile.blunite_stairs.name=Escalera de Blunita
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=Blunita pulida
 //tile.polished_blunite_stairs.name=Escalera de Blunita pulida
 tile.carbonite.name=Carbonita
 //tile.carbonite_stairs.name=Escalera de Carbonita
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=Carbonita pulida
 //tile.polished_carbonite_stairs.name=Escalera de Carbonita pulida
 tile.footblock.name=Futbloque
