--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=cool brik
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=moon-a-bloc
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=pretteh monnbloc
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=blac stoneh
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=pretteh blac ston
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=futbloc
