--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=Witte bakstenen
 tile.white_brick_stairs.name=Witte bakstenen trap
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite trap
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=Gepolijst blunite
 tile.polished_blunite_stairs.name=Gepolijst blunite trap
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite trap
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=Gepolijst carbonite
 tile.polished_carbonite_stairs.name=Gepolijst carbonite trap
 tile.footblock.name=Voetblok
