--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=White Bricks
 tile.white_brick_stairs.name=White Brick Stairs
 tile.blunite.name=Blunite
 tile.blunite_stairs.name=Blunite Stairs
+tile.blunite_wall.name=Blunite Wall
 tile.polished_blunite.name=Polished Blunite
 tile.polished_blunite_stairs.name=Polished Blunite Stairs
 tile.carbonite.name=Carbonite
 tile.carbonite_stairs.name=Carbonite Stairs
+tile.carbonite_wall.name=Carbonite Wall
 tile.polished_carbonite.name=Polished Carbonite
 tile.polished_carbonite_stairs.name=Polished Carbonite Stairs
 tile.footblock.name=Footblock
