--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=sʞɔᴉɹᗺ ǝʇᴉɥM
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=ǝʇᴉunlᗺ
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=ǝʇᴉunlᗺ pǝɥsᴉloԀ
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=ǝʇᴉuoqɹɐƆ
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=ǝʇᴉuoqɹɐƆ pǝɥsᴉloԀ
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=ʞɔolqʇooℲ
