--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=brik blanch
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=blunit
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=blunit tou bo tou propr
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=crbonit
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=cobnite bo
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=blok foutbol
