--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=Briques blanches
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=Blunite
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=Blunite poli
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=Carbonite
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=Carbonite polie
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=Bloc de foot
