--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -12,10 +12,12 @@ tile.white_bricks.name=白色砖块
 //tile.white_brick_stairs.name=<newline>
 tile.blunite.name=蓝岩
 //tile.blunite_stairs.name=<newline>
+//tile.blunite_wall.name=<newline>
 tile.polished_blunite.name=磨制蓝岩
 //tile.polished_blunite_stairs.name=<newline>
 tile.carbonite.name=碳岩
 //tile.carbonite_stairs.name=<newline>
+//tile.carbonite_wall.name=<newline>
 tile.polished_carbonite.name=磨制碳岩
 //tile.polished_carbonite_stairs.name=<newline>
 tile.footblock.name=足球块
