--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -101,7 +101,7 @@ item.bandana.name=Kopftuch
 item.smash_ball.name=Smash Ball
 
 item.headphones.name=Kopfhörer
-item.record_blank.name=Leere Musikdiskette
+item.record_blank.name=Leere Schallplatte
 item.record.champions_road.desc=Super Mario 3D World - Champion's Road
 item.record.fly_octo_fly.desc=Splatoon 2 - Fly Octo Fly
 item.record.vampire_killer.desc=Castlevania Judgement - Vampire Killer
