--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -25,6 +25,8 @@ tile.white_cloud_block.name=Weiße Wolkenblock
 //tile.light_gray_cloud_block.name=<newline>
 //tile.gray_cloud_block.name=<newline>
 //tile.black_cloud_block.name=<newline>
+//tile.tomato.name=<newline>
+//tile.salad.name=<newline>
 
 tile.question_block.name=? Block
 tile.empty_block.name=Leerer Block
@@ -72,6 +74,7 @@ tile.red_candy_cane_pillar.name=Roter Zuckerstangensäule
 tile.purple_candy_cane_pillar.name=Lila Zuckerstangensäule
 
 //tile.scarlet_mushroom.name=<newline>
+//tile.scarlet_orchid.name=<newline>
 
 tile.iron_scaffolding.name=Eisen Gerüst
 tile.purple_bricks.name=Lila Ziegelsteine
@@ -93,6 +96,9 @@ item.chocolate_crepe.name=Schokoladen-Crêpe
 item.caramel_crepe.name=Karamell-Crêpe
 item.candy_cane.name=Zuckerstange
 //item.burger.name=<newline>
+//item.tomato.name=<newline>
+//item.salad.name=<newline>
+//item.cheese.name=<newline>
 
 item.super_mushroom.name=Super-Pilz
 item.peach.name=Pfirsich
@@ -112,6 +118,7 @@ item.princess_peach_crown.name=Prinzessin Peach's Krone
 item.princess_daisy_crown.name=Prinzessin Daisy's Krone
 item.pink_gold_peach_crown.name=Rosagold-Peach's Krone
 item.super_crown.name=Super Krone
+//item.rosalina_crown.name=<newline>
 
 item.bandana.name=Kopftuch
 
