--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -25,6 +25,8 @@ tile.white_cloud_block.name=Bloque de nube blanca
 tile.light_gray_cloud_block.name=Bloque de nube gris claro
 tile.gray_cloud_block.name=Bloque de nube gris
 tile.black_cloud_block.name=Bloque de nube negra
+//tile.tomato.name=<newline>
+//tile.salad.name=<newline>
 
 tile.question_block.name=Bloque ?
 tile.empty_block.name=Bloque vacío
@@ -72,6 +74,7 @@ tile.red_candy_cane_pillar.name=Pilar de bastón de caramelo rojo
 tile.purple_candy_cane_pillar.name=Pilar de bastón de caramelo morado
 
 tile.scarlet_mushroom.name=Champiñón escarlata
+//tile.scarlet_orchid.name=<newline>
 
 tile.iron_scaffolding.name=Andamio de hierro
 tile.purple_bricks.name=Ladrillos morados
@@ -93,6 +96,9 @@ item.chocolate_crepe.name=Crepe de chocolate
 item.caramel_crepe.name=Crepe de caramelo
 item.candy_cane.name=Bastón de caramelo
 item.burger.name=Hamburguesa
+//item.tomato.name=<newline>
+//item.salad.name=<newline>
+//item.cheese.name=<newline>
 
 item.super_mushroom.name=Súper champiñón
 item.peach.name=Durazno
@@ -112,6 +118,7 @@ item.princess_peach_crown.name=Corona de la Princesa Peach
 item.princess_daisy_crown.name=Corona de la Princesa Daisy
 item.pink_gold_peach_crown.name=Corona de Peach de oro rosa
 item.super_crown.name=Supercorona
+//item.rosalina_crown.name=<newline>
 
 item.bandana.name=Pañuelo
 
