Added Broque Monsieur's Head and Rosalina's Crown

--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=Prinzessin Daisy's Krone
 item.pink_gold_peach_crown.name=Rosagold-Peach's Krone
 item.super_crown.name=Super Krone
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=Kopftuch
 
