--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=Princess Daisy's Crown
 item.pink_gold_peach_crown.name=Pink Gold Peach's Crown
 item.super_crown.name=Super Crown
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=Bandana
 
