--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=uʍoɹƆ s,ʎsᴉɐp ssǝɔuᴉɹԀ
 item.pink_gold_peach_crown.name=uʍoɹƆ s,ɥɔɐǝԀ ploפ ʞuᴉԀ
 item.super_crown.name=uʍoɹƆ ɹǝdnS
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=ɐuɐpuɐᗺ
 
