--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=couraun peeach
 item.pink_gold_peach_crown.name=couraun pech ros dorai
 item.super_crown.name=couraune bien supair coule. 
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=banade
 
