--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=disi  cron
 item.pink_gold_peach_crown.name=pingol peech cron
 item.super_crown.name=waifu creator
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=banana
 
