--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=Prinses Daisy's kroon
 item.pink_gold_peach_crown.name=Rozegouden Peach's kroon
 item.super_crown.name=Superkroon
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=Bandana
 
