--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=黛西公主的王冠
 //item.pink_gold_peach_crown.name=<newline>
 item.super_crown.name=超級王冠
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=手帕
 
