--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=Corona de la Princesa Daisy
 item.pink_gold_peach_crown.name=Corona de Peach de oro rosa
 item.super_crown.name=Supercorona
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=Pañuelo
 
