--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=Couronne de la Princesse Daisy
 item.pink_gold_peach_crown.name=Couronne de Peach d'or rose
 item.super_crown.name=Super couronne
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=Bandana
 
