--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -119,6 +119,7 @@ item.princess_daisy_crown.name=黛西公主的王冠
 item.pink_gold_peach_crown.name=碧奇公主的粉金王冠
 item.super_crown.name=超级王冠
 //item.rosalina_crown.name=<newline>
+//item.broque_monsieur_head.name=<newline>
 
 item.bandana.name=手帕
 
