--- a/resources/assets/mubble/lang/en_gb.lang
+++ b/resources/assets/mubble/lang/en_gb.lang
@@ -123,6 +123,8 @@ item.super_crown.name=Super Crown
 
 item.bandana.name=Bandana
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=Smash Ball
 
 item.annoying_dog.name=Annoying Dog
