--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -123,6 +123,8 @@ item.super_crown.name=uʍoɹƆ ɹǝdnS
 
 item.bandana.name=ɐuɐpuɐᗺ
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=llɐᗺ ɥsɐɯS
 
 //item.annoying_dog.name=<newline>
