--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -123,6 +123,8 @@ item.broque_monsieur_head.name=Broque Monsieur's Head
 
 item.bandana.name=Bandana
 
+item.top_hat.name=Top Hat
+
 item.smash_ball.name=Smash Ball
 
 item.annoying_dog.name=Annoying Dog
