--- a/resources/assets/mubble/lang/es_es.lang
+++ b/resources/assets/mubble/lang/es_es.lang
@@ -123,6 +123,8 @@ item.super_crown.name=Supercorona
 
 item.bandana.name=Pañuelo
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=Bola Smash
 
 //item.annoying_dog.name=Perro molesto
