--- a/resources/assets/mubble/lang/fr_fe.lang
+++ b/resources/assets/mubble/lang/fr_fe.lang
@@ -123,6 +123,8 @@ item.super_crown.name=couraune bien supair coule.
 
 item.bandana.name=banade
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=boul smash bros
 
 //item.annoying_dog.name=<newline>
