--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -123,6 +123,8 @@ item.super_crown.name=Super couronne
 
 item.bandana.name=Bandana
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=Balle Smash
 
 //item.annoying_dog.name=<newline>
