--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -123,6 +123,8 @@ item.super_crown.name=waifu creator
 
 item.bandana.name=banana
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=sm4sh bol
 
 //item.annoying_dog.name=<newline>
