--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -123,6 +123,8 @@ item.super_crown.name=Superkroon
 
 item.bandana.name=Bandana
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=Smash bal
 
 item.annoying_dog.name=Iritante hond
