--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -123,6 +123,8 @@ item.super_crown.name=Super Krone
 
 item.bandana.name=Kopftuch
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=Smash Ball
 
 //item.annoying_dog.name=<newline>
