--- a/resources/assets/mubble/lang/zh_tw.lang
+++ b/resources/assets/mubble/lang/zh_tw.lang
@@ -123,6 +123,8 @@ item.super_crown.name=超級王冠
 
 item.bandana.name=手帕
 
+//item.top_hat.name=<newline>
+
 item.smash_ball.name=粉碎球
 
 //item.annoying_dog.name=<newline>
