Added Studiopolis Clapper

--- a/resources/assets/mubble/lang/fr_fr.lang
+++ b/resources/assets/mubble/lang/fr_fr.lang
@@ -73,6 +73,8 @@ tile.yellow_candy_cane_pillar.name=Piller de sucre d'orge jaune
 tile.red_candy_cane_pillar.name=Piller de sucre d'orge rouge
 tile.purple_candy_cane_pillar.name=Piller de sucre d'orge violet
 
+//tile.studiopolis_clapper.name=<newline>
+
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
