--- a/resources/assets/mubble/lang/nl_nl.lang
+++ b/resources/assets/mubble/lang/nl_nl.lang
@@ -73,6 +73,8 @@ tile.yellow_candy_cane_pillar.name=Gele zuurstokpillaar
 tile.red_candy_cane_pillar.name=Rode zuurstokpillaar
 tile.purple_candy_cane_pillar.name=Paarse zuurstokpillaar
 
+//tile.studiopolis_clapper.name=<newline>
+
 tile.scarlet_mushroom.name=Scharlake paddenstoel
 //tile.scarlet_orchid.name=<newline>
 
