--- a/resources/assets/mubble/lang/zh_cn.lang
+++ b/resources/assets/mubble/lang/zh_cn.lang
@@ -73,6 +73,8 @@ tile.yellow_candy_cane_pillar.name=黄色拐杖糖支柱
 tile.red_candy_cane_pillar.name=红色拐杖糖支柱
 tile.purple_candy_cane_pillar.name=紫色拐杖糖支柱
 
+//tile.studiopolis_clapper.name=<newline>
+
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
