--- a/resources/assets/mubble/lang/de_de.lang
+++ b/resources/assets/mubble/lang/de_de.lang
@@ -73,6 +73,8 @@ tile.yellow_candy_cane_pillar.name=Gelber Zuckerstangensäule
 tile.red_candy_cane_pillar.name=Roter Zuckerstangensäule
 tile.purple_candy_cane_pillar.name=Lila Zuckerstangensäule
 
+//tile.studiopolis_clapper.name=<newline>
+
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
