--- a/resources/assets/mubble/lang/en_ud.lang
+++ b/resources/assets/mubble/lang/en_ud.lang
@@ -73,6 +73,8 @@ tile.yellow_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ʍollǝ⅄
 tile.red_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ pǝᴚ
 tile.purple_candy_cane_pillar.name=ɹɐllᴉԀ ǝuɐƆ ʎpuɐƆ ǝldɹnԀ
 
+//tile.studiopolis_clapper.name=<newline>
+
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
 
