--- a/resources/assets/mubble/lang/en_us.lang
+++ b/resources/assets/mubble/lang/en_us.lang
@@ -73,7 +73,8 @@ tile.yellow_candy_cane_pillar.name=Yellow Candy Cane Pillar
 tile.red_candy_cane_pillar.name=Red Candy Cane Pillar
 tile.purple_candy_cane_pillar.name=Purple Candy Cane Pillar
 
-tile.studiopolis_clapper.name=Studiopolis Clapper
+tile.yellow_studiopolis_clapper.name=Yellow Studiopolis Clapper
+tile.blue_studiopolis_clapper.name=Blue Studiopolis Clapper
 
 tile.scarlet_mushroom.name=Scarlet Mushroom
 tile.scarlet_orchid.name=Scarlet Orchid
