--- a/resources/assets/mubble/lang/lol_us.lang
+++ b/resources/assets/mubble/lang/lol_us.lang
@@ -73,7 +73,8 @@ tile.yellow_candy_cane_pillar.name=yelou big christmas cane
 tile.red_candy_cane_pillar.name=redd big christmas cane
 tile.purple_candy_cane_pillar.name=purpl big christmas cane
 
-//tile.studiopolis_clapper.name=<newline>
+//tile.yellow_studiopolis_clapper.name=<newline>
+//tile.blue_studiopolis_clapper.name=<newline>
 
 //tile.scarlet_mushroom.name=<newline>
 //tile.scarlet_orchid.name=<newline>
